# oncoexporter

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  columns.txt  diagnosis_df.txt  diagnosis_rsub.txt  index.html  interpretations_list.txt  medicalaction.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  researchsubject_df.txt  rsub_diagnosis_df.txt  rsub_diagnosis_df2.txt  run_cervix.out.txt  stage.txt  subject_df.txt  subject_df_add_columns.txt  subject_df_in_rsub.txt  subject_rsub_df.txt  treatment_df.txt
.github/workflows/: documentation.yaml  python_ci.yml  qc.yml
cda/cda_biosample_factory/: index.html
cda/cda_disease_factory/: index.html
cda/cda_factory/: index.html
cda/cda_individual_factory/: index.html
cda/cda_mutation_factory/: index.html
cda/cda_table_importer/: index.html
docs/: Makefile  conf.py  index.md  index.rst  installation.md  installation.rst  workplan.md  workplan.rst
docs/cda/: cda_biosample_factory.md  cda_disease.md  cda_disease_factory.md  cda_factory.md  cda_individual_factory.md  cda_mutation_factory.md  cda_table_importer.md
docs/explanations/: cda_disease.md  cda_mutation.md  new_cda_api.md
docs/model/: index.md  index.rst  op_individual.md  op_individual.rst
explanations/cda_disease/: index.html
explanations/cda_mutation/: index.html
installation/: index.html
model/: index.html
model/op_individual/: index.html
notebooks/: Biosample.ipynb  Biosample_test.ipynb  Disease.ipynb  GDC_mutations_test.ipynb  Individual.ipynb  Mutation.ipynb  Test_stage.ipynb  Treatment.ipynb  all_unique_combination_of_twelve_tissues.json  cda_cols.csv  map_cda_data_to_canonical_ncit.ipynb  mutdf.csv
notebooks/CombinationsForTissues/: 01-bone.ipynb  02-brain.ipynb  03-breast.ipynb  04-cervix.ipynb  05-colon.ipynb  06-heart.ipynb  07-kidney.ipynb  08-liver.ipynb  09-lung.ipynb  10-pancreas.ipynb  11-skin.ipynb  12-thyroid.ipynb  check_results.ipynb  combining_all_tissues.ipynb
notebooks/CombinationsForTissues/results/: Bone_unique_combination.csv  Brain_unique_combination.csv  Breast_unique_combination.csv  Cervix_unique_combination.csv  Colon_unique_combination.csv  Heart_unique_combination.csv  Kidney_unique_combination.csv  Liver_unique_combination.csv  Lung_unique_combination.csv  Pancreas_unique_combination.csv  Skin_unique_combination.csv  Thyroid_unique_combination.csv  all_tissues_combined.csv
scripts/: run_bone.py  run_brain.py  run_breast.py  run_cervix.py  run_colon.py  run_heart.py  run_kidney.py  run_liver.py  run_lung.ipynb  run_lung.py  run_pancreas.py  run_skin.py  run_thyroid.py
search/: search_index.json
src/: run_cervix.py  run_lung.py
src/c2p/: __init__.py  individual_factory.py  message_factory.py  utils.py
src/fetch_tissue_data/: run_breast.py  run_kidney.py  run_lung.py
src/oncoexporter/: __init__.py
src/oncoexporter/cda/: __init__.py  _biosample.py  _configure.py  _gdc.orig.py  _gdc.py  _test_biosample.py  cda_biosample.py  cda_biosample_factory.py  cda_disease_factory.py  cda_downloader.py  cda_factory.py  cda_importer.py  cda_individual_factory.py  cda_medicalaction_factory.py  cda_mutation_factory.py  cda_table_importer.py  neoplasm_types.tsv
src/oncoexporter/cda/mapper/: __init__.py  (+9 more)
src/oncoexporter/downloaded_files/: README.md
src/oncoexporter/model/: __init__.py  op_Individual.py  op_disease.py  op_message.py  op_mutation.py
src/oncoexporter/ncit_mapping_files/: Neoplasm_Core.csv  README.md  cda_to_ncit_map.tsv  cda_to_ncit_map_old.tsv  cervical_dx.xlsx  map_cda_to_canonical_ncit.py  uberon_to_ncit_diagnosis.tsv
src/oncopacket/: __init__.py  utils.py
src/oncopacket/cda/: __init__.py  cda_disease_factory.py  cda_factory.py  cda_individual_etl.py  cda_individual_factory.py  op_mapper.py
src/oncopacket/model/: OpIndividual  op_Individual.py  op_disease.py  op_message.py
tests/: op_diagnosis_mapper_test.py  test_cda_disease_factory.py  test_cda_disease_factory_tiny.py  test_cda_factory.py  test_cda_individual_factory.py  test_gdc_mutation.py  test_individual_factory.py  test_iso_age_mapper.py  test_json.py  test_op_biosample.py  test_op_disease.py  test_op_individual.py  test_op_mutation.py
tests/data/: merged_diagnosis_researchsubject_tiny.tsv  merged_diagnosis_researchsubject_unique_stages_lung_cervix.tsv  merged_diagnosis_researchsubject_unique_stages_lung_cervix.tsv.orig  mutation_excerpt.tsv  sub_rsub_diag_df_test.txt
tests/mapper/: test_op_diagnosis_mapper.py
workplan/: index.html
(+12 files in other folders)
