# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./src"]
exclude = ["notebooks", "test"]

[tool.setuptools.package-data]
"oncoexporter.cda.mapper" = ["*.tsv"]

[project]
name = "oncoexporter"
dynamic = ["version"]
requires-python = ">=3.5"
description = "Generate and work with GA4GH phenopackets for NCI"
readme = "README.md"
authors = [
    {name = "Peter Robinson", email="peter.robinson@jax.org"},
     ]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = [
    "Global Alliance for Genomics and Health",
    "GA4GH Phenopacket Schema",
    "Human Phenotype Ontology",
    "GA4GH",
    "NCI",
    "HPO"]
dependencies = [
    "hpo-toolkit>=0.3.0,<0.4.0",
    "phenopackets>=2.0.2",
    "requests",
    "cdapython@git+https://github.com/CancerDataAggregator/cda-python",
    "tqdm"
]
[project.optional-dependencies]
test = ["pytest"]



#[project.optional-dependencies]
#dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
homepage = "https://github.com/monarch-initiative/oncoexporter"
repository = "https://github.com/monarch-initiative/oncoexporter.git"
documentation = "https://github.com/monarch-initiative/oncoexporter"
bugtracker = "https://github.com/monarch-initiative/oncoexporter/issues"

[tool.setuptools.dynamic]
version = { attr = "oncoexporter.__version__" }
